Fixed overflow-x scrollable bug

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: #F5F5F5;
-  font-family: 'Montserrat', sans-serif; 
+  font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 * {
